--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,6 @@
 #
 cmake_minimum_required (VERSION 3.8)
 
-
-
 if(${CMAKE_EXE_LINKER_FLAGS} STREQUAL /machine:x64)
 	set(ARCH_X64 TRUE)
 elseif(${CMAKE_EXE_LINKER_FLAGS} STREQUAL /machine:X86)
@@ -16,8 +14,6 @@ project ("binary_scene")
 
 # Add source to this project's executable.
 add_executable (binary_scene "binary_scene.cpp"  "texture.hpp" "scene.hpp" "scenes.hpp")
-
-# TODO: Add tests and install targets if needed.
 
 set(LIB_DIR "${CMAKE_SOURCE_DIR}/libs")
 
@@ -32,25 +28,14 @@ if(DEFINED ARCH_X64)
 	    set(BOOST_LIBRARYDIR ${LIB_DIR}/boost/1_73_0/stage/x64/lib)
 	    set(Boost_DIR ${LIB_DIR}/boost/1_73_0/stage/x64/lib/cmake/Boost-1.73.0)
 	    set(LOCAL_BOOST_LIB "${LIB_DIR}/boost/1_73_0/stage/x64/lib/cmake/Boost-1.73.0")
-    elseif(DEFINED ANDROID)
-        message(STATUS "Setting Boost variables for Android")
-        set(BOOST_LIBRARYDIR ${LIB_DIR}/boost/android/1_72_0)
-        set(Boost_DIR ${LIB_DIR}/boost/android/1_72_0)
-        set(LOCAL_BOOST_LIB "${LIB_DIR}/boost/android/1_72_0")
     endif() # WIN32
 elseif(DEFINED ARCH_X86)
     if(WIN32)
-        message(STATUS "Setting Boost variables for Android")
+        message(STATUS "Setting Boost variables for Windows")
 
         set(BOOST_LIBRARYDIR ${LIB_DIR}/boost/1_73_0/stage/x86/lib)
         set(Boost_DIR ${LIB_DIR}/boost/1_73_0/stage/x86/lib/cmake/Boost-1.73.0)
         set(LOCAL_BOOST_LIB "${LIB_DIR}/boost/1_73_0/stage/x86/lib/cmake/Boost-1.73.0")
-    elseif(DEFINED ANDROID)
-        message(STATUS "Setting Boost variables for Android")
-
-        set(BOOST_LIBRARYDIR ${LIB_DIR}/boost/android/1_72_0)
-        set(Boost_DIR ${LIB_DIR}/boost/android/1_72_0)
-        set(LOCAL_BOOST_LIB "${LIB_DIR}/boost/android/1_72_0")
     else()
         message(STATUS "***Error: No environment selected***")
     endif() # WIN32
@@ -74,7 +59,7 @@ elseif(DEFINED BUILD_RELEASE)
 else()
 	message(STATUS "***Error: No environment selected***")
 endif() # debug
-#set(Boost_COMPILER -vc142)
+
 if(DEFINED ARCH_X64)
 	set(Boost_ARCHITECTURE -x64)
 elseif(DEFINED ARCH_X86)
