--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -22,7 +22,8 @@
           "value": "debug",
           "type": "STRING"
         }
-      ]
+      ],
+      "intelliSenseMode": "windows-msvc-x64"
     },
     {
       "name": "x86-Debug",
@@ -45,7 +46,8 @@
           "value": "debug",
           "type": "STRING"
         }
-      ]
+      ],
+      "intelliSenseMode": "windows-msvc-x86"
     }
   ]
 }
